--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,43 @@
-#Dependencias a ignorar
-node_modules/
-package-lock.json
-.env
+# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
-#Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-.pnpm-debug.log*
-.vscode/
+# Compiled output
+/dist
+/tmp
+/out-tsc
+/bazel-out
+
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
+
+# IDEs and editors
 .idea/
-.DS_Store
-dist/
-coverage/
-.cache/
-.next/
-out/
-.svelte-kit/
-.nuxt/
-build/
-public/build/
-.astro/
-.venv/
-
-#Archivos de sistema
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-$RECYCLE.BIN/
-*.swp
-*~
 .project
 .classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
-#Archivos de upload
-uploads/*
-!.gitkeep
-*.pem
-*.key
-*.crt
-*.p12
-*.pfx
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
+# Miscellaneous
+/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
+__screenshots__/
+
+# System files
+.DS_Store
+Thumbs.db
