--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "banca_backend",
+  "name": "banca-backend",
   "version": "1.0.0",
-  "description": "",
-  "keywords": [
-    "banca",
-    "backend",
-    "proyectoFinal"
-  ],
-  "license": "ISC",
-  "author": "julian david suarez giron, santiago ortiz pacheco, isabel cristina lopez montaño, jeison valor rojas",
-  "type": "commonjs",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "dev": "nodemon src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2",
-    "mysql2": "^3.15.2"
+    "mysql2": "^3.15.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.6.2",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
